<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安全童行体验馆</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_submit">提交</string>
    <string name="text_ok">完成</string>
    <string name="empty"></string>
    <string name="cancel">取消</string>
    <string name="dismiss">消失</string>
    <string name="exit_app">退出程序</string>
    <string name="prompt">提示</string>
    <string name="confirm">确认</string>
    <string name="know">知道</string>
    <string name="pull_to_refresh_more">加载更多</string>
    <string name="pull_to_refresh_normal">下拉可以刷新</string>
    <string name="pull_to_refresh_ready">松开可以刷新</string>
    <string name="pull_to_refresh_last_time">更新于:</string>
    <string name="pull_to_refresh_loading">正在刷新\u2026</string>

</resources>
